project5/patrick_template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Creates 3 instances and 1 VPC.  Each instance gets a private IP and is pre-installed with required software.  Each instance also has a public / elastic IP because we can't create NAT gateways...
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: "AWS::EC2::KeyPair::KeyName"
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  # This SSHLocation could go.
  SSHLocation:
    Description: " The IP address range that can be used to access the EC2 instance"
    Type: String
    MinLength: "9"
    MaxLength: "18"
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Mappings:
  AWSInstanceType2Arch: # Supported architectures (x64bit only)
    t2.micro:
      Arch: HVM64
  AWSRegionUbuntu: # AMI for Ubuntu server in each supported region
    us-east-1: # N. Virginia
      PV64: NOT_SUPPORTED
      HVM64: ami-09e67e426f25ce0d7 # AMI ID for Ubuntu 20 - Amazon Linux 2 AMI ami-02e136e904f3da870
      HVMG2: NOT_SUPPORTED
Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: 10.0.0.0/16 # EC 10.0.0.0/24
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: CEG2350 VPC
  Subnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/28 # EC 10.0.0.0/28
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
  AttachGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
  Route:
    Type: "AWS::EC2::Route"
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  SubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable
  # This is the order to get an EIP and attach to instance defined
  #   by PublicUbuntuInstance
  UbuntuIPAddress:
    Type: "AWS::EC2::EIP"
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
      InstanceId: !Ref PublicUbuntuInstance
  Web1IPAddress:
    Type: "AWS::EC2::EIP"
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
      InstanceId: !Ref WebServ1Instance
  # elastic IP for last instance
  Web2IPAddress:
    Type: "AWS::EC2::EIP"
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
      InstanceId: !Ref WebSer2Instance
  Lab1SecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable SSH access via port 22 and open all insternal ports.
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: 10.0.0.0/24 # VPC as a whole.  EC 10.0.0.0/24
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: 130.108.0.0/16 # WSU CIDR
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: 70.237.11.57/32 # home public IP
          # Need more rules for port 80
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: 0.0.0.0/0 # Allow inbound HTTP access from any IP address
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: 10.0.0.0/24 # Access HTTP from within the VPC
  # This defines one instance.  Make two more instances based on this (but no elastic IP)
  PublicUbuntuInstance:
    Type: "AWS::EC2::Instance"
    DependsOn: AttachGateway
    Properties:
      ImageId: !FindInMap
        - AWSRegionUbuntu
        - !Ref "AWS::Region"
        - !FindInMap
          - AWSInstanceType2Arch
          - t2.micro
          - Arch
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: proxy
      NetworkInterfaces:
        - GroupSet:
            - !Ref Lab1SecurityGroup
          AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          DeleteOnTermination: "true"
          SubnetId: !Ref Subnet
          PrivateIpAddress: 10.0.0.10 # EC Private ip 15 or lower
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          apt-get update && \
          # need to install haproxy
          apt-get install -y git python3 python3-pip haproxy && \
          hostnamectl set-hostname proxy && \
          reboot
  WebServ1Instance:
    Type: "AWS::EC2::Instance"
    DependsOn: AttachGateway
    Properties:
      ImageId: !FindInMap
        - AWSRegionUbuntu
        - !Ref "AWS::Region"
        - !FindInMap
          - AWSInstanceType2Arch
          - t2.micro
          - Arch
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: webserv1
      NetworkInterfaces:
        - GroupSet:
            - !Ref Lab1SecurityGroup
          AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          DeleteOnTermination: "true"
          SubnetId: !Ref Subnet
          PrivateIpAddress: 10.0.0.12 # make sure unique to the instance
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          apt-get update && \
          # need to install apache or nginx
          apt-get install -y git apache2 && \
          hostnamectl set-hostname WebServ1  && \
          reboot
  WebSer2Instance:
    Type: "AWS::EC2::Instance"
    DependsOn: AttachGateway
    Properties:
      ImageId: !FindInMap
        - AWSRegionUbuntu
        - !Ref "AWS::Region"
        - !FindInMap
          - AWSInstanceType2Arch
          - t2.micro
          - Arch
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      Tags:
        - Key: Application
          Value: !Ref "AWS::StackId"
        - Key: Name
          Value: webserv2
      NetworkInterfaces:
        - GroupSet:
            - !Ref Lab1SecurityGroup
          AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          DeleteOnTermination: "true"
          SubnetId: !Ref Subnet
          PrivateIpAddress: 10.0.0.11 # make sure unique to the instance
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          apt-get update && \
          # need to install apache or nginx
          apt-get install -y git apache2 && \
          hostnamectl set-hostname WebServ2  && \
          reboot
